--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.🐸 {
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
+}
