--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,4 +44,16 @@
       padding: 0;
     }
   }
+
+  .MuiPopper-root {
+    ::-webkit-scrollbar {
+      @apply w-1 h-1 md:w-1.5 md:h-1.5;
+    }
+    ::-webkit-scrollbar-thumb {
+      @apply rounded-full bg-blue-700/60;
+    }
+    ::-webkit-scrollbar-track {
+      @apply bg-transparent;
+    }
+  }
 }
